--- a/static/css/lotto.css
+++ b/static/css/lotto.css
@@ -1,5 +1,24 @@
+.container {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
 .card {
     margin-top: 15px;
+}
+
+#box {
+    position: absolute;
+    border: 8px solid black;
+    width: 300px;
+    height: 160px;
+    border-radius: 15px;
+}
+
+#lotto-list {
+    width: 100%;
+    overflow-y: hidden;
 }
 
 body {
@@ -18,4 +37,14 @@ html {
     background: -webkit-linear-gradient(top,  #a90329 0%,#8f0222 44%,#6d0019 100%);
     background: linear-gradient(to bottom,  #a90329 0%,#8f0222 44%,#6d0019 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a90329', endColorstr='#6d0019',GradientType=0 );
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+li {
+    text-align: center;
+    font-size: 250%;
 }
