--- a/static/css/lotto.css
+++ b/static/css/lotto.css
@@ -8,6 +8,17 @@
     margin-top: 15px;
 }
 
+#title {
+    font-size: 400%;
+    margin-top: 15px;
+}
+
+#sel {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
 #box {
     position: absolute;
     border: 8px solid black;
@@ -31,6 +42,7 @@ h1 {
 }
 
 html {
+    overflow-y: hidden;
     height: 100%;
     background: #a90329;
     background: -moz-linear-gradient(top,  #a90329 0%, #8f0222 44%, #6d0019 100%);
