--- a/static/css/lotto.css
+++ b/static/css/lotto.css
@@ -1,3 +1,16 @@
+.scroll-fade {
+    height: 30px;
+    position: absolute;
+}
+
+.scroll-fade-top {
+    background: linear-gradient(to bottom, red 0%, red 100%);
+}
+
+.scroll-fade-bottom {
+    background: linear-gradient(to top, red 0%, red 100%);
+}
+
 .container {
     overflow: hidden;
     width: 100%;
@@ -25,6 +38,7 @@
     width: 300px;
     height: 160px;
     border-radius: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #lotto-list {
